--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-streamlit==0.73.1
-pandas==1.1.5
-matplotlib==3.2.2
-seaborn==0.11.0
 numpy==1.19.4
+seaborn==0.11.0
+matplotlib==3.2.2
+opencv_contrib_python==4.1.2.30
+scikit_image==0.16.2
+streamlit==0.73.1
+Keras==2.4.3
+tensorflow==2.4.0
+pandas==1.1.5
+Pillow==8.0.1
 scikit_learn==0.24.0
+skimage==0.0
+openslide==3.4.1
 gunicorn==19.9.0
